--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap");
+@import "components/footer";
+@import "components/header";
+@import "sections/infoSection";
+@import "sections/bannerSection";
 
 body {
+  padding: 0;
+  margin: 0;
+  min-height: 100%;
+  height: 3000px;
   font-family: "Lato", sans-serif;
+}
+
+#content {
+  padding: 150px 0 0;
 }
