--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -1,3 +1,95 @@
 .footer {
     display: block;
+    background-color: #6c63ff;
+    padding: 50px 0;
+    color: white;
+
+    &--inner {
+        width: 100%;
+        max-width: 700px;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        justify-content: space-between;
+
+        .footer--logo {
+            margin-left: 30px;
+            display: inline-flex;
+            margin: auto;
+            background-repeat: no-repeat;
+            background-size: cover;
+            width: 268px;
+            height: 100px;
+            background-image: url("/assets/images/logo-dark.png");
+        }
+
+        .footer--copy {
+            font-size: 12px;
+            margin: 0 auto 20px;
+        }
+
+        .footer--cta {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            &-mail,
+            &-phone {
+                display: flex;
+                align-items: center;
+                height: 35px;
+
+                a {
+                    color: white;
+                    text-decoration: none;
+                }
+            }
+
+            &-mail {
+                padding-left: 35px;
+                position: relative;
+
+                &::before {
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    width: 35px;
+                    height: 35px;
+                    content: "";
+                    background-image: url("/assets/images/email.svg");
+                    background-repeat: no-repeat;
+                    background-size: contain;
+                }
+            }
+            &-phone {
+                padding-left: 35px;
+                position: relative;
+
+                &::before {
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    width: 35px;
+                    height: 35px;
+                    content: "";
+                    background-image: url("/assets/images/phone.svg");
+                    background-repeat: no-repeat;
+                    background-size: contain;
+                }
+            }
+        }
+
+        .footer--nav {
+            width: 250px;
+            margin: 0 auto 20px;
+            display: flex;
+            justify-content: space-evenly;
+
+            a {
+                color: white;
+                text-decoration: none;
+            }
+        }
+    }
 }
