--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,17 +1,66 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap");
+@import "helpers/_breakpoints";
 @import "components/footer";
 @import "components/header";
 @import "sections/infoSection";
 @import "sections/bannerSection";
+@import "sections/featureSection";
+@import "forms/LoanApplicationForm";
 
 body {
   padding: 0;
   margin: 0;
   min-height: 100%;
-  height: 3000px;
   font-family: "Lato", sans-serif;
 }
 
-#content {
-  padding: 150px 0 0;
+.cta-wrapper {
+  position: relative;
+
+  .underscore--link {
+    position: relative;
+    color: black;
+    padding: 3px 10px;
+    font-size: 22px;
+    text-decoration: none;
+    text-transform: lowercase;
+
+    &::before {
+      content: "";
+      position: absolute;
+      display: block;
+      background-color: lightskyblue;
+      width: 100%;
+      height: 10px;
+      z-index: -1;
+      left: 0;
+      bottom: 0;
+      transform: rotate(1deg);
+    }
+  }
+}
+
+.scroll--up {
+  position: fixed !important;
+  right: -100px !important;
+  bottom: 20px !important;
+  transition: right 0.5s !important;
+  cursor: pointer !important;
+  background-color: transparent !important;
+  font-size: 20px !important;
+  padding: 10px !important;
+  color: #514bbf;
+  fill: #514bbf;
+  stroke: #514bbf;
+  outline: 0;
+  outline: none;
+
+  &-transition {
+    right: 20px !important;
+
+    svg {
+      fill: #514bbf !important;
+      stroke: #514bbf !important;
+    }
+  }
 }
