Add form styles and conditional logic

--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -1,6 +1,6 @@
 .footer {
     display: block;
-    background-color: #6c63ff;
+    background-color: #575a89;
     padding: 50px 0;
     color: white;
 
