Add possible fix for CSS/webpack relative paths

--- a/src/sections/bannerSection.scss
+++ b/src/sections/bannerSection.scss
@@ -20,7 +20,7 @@
         width: 100%;
         max-width: 800px;
         height: 560px;
-        background-image: url("/assets/images/banner_illustration.svg");
+        background-image: url(/assets/images/banner_illustration.svg);
         background-repeat: no-repeat;
         background-size: auto;
         background-position: center center;
