--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -18,13 +18,17 @@
 
     .hero--img {
         height: 100vh;
-        background-image: url("/assets/images/walk_in_the_park.svg");
+        background-image: url(/assets/images/walk_in_the_park.svg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
         margin: 0 auto;
         position: relative;
         z-index: 1;
+
+        @include breakpoint(sm) {
+            background-position: -800px center;
+        }
     }
 
     .hero--section-headings {
@@ -34,6 +38,10 @@
         max-width: 70%;
         left: 150px;
         top: 150px;
+
+        @include breakpoint(sm) {
+            left: 30px;
+        }
 
         h1 {
             font-weight: 700;
@@ -95,7 +103,7 @@
 
     &.light {
         .logo {
-            background-image: url("/assets/images/logo-dark.png");
+            background-image: url(/assets/images/logo-dark.png);
             transition: all ease-in-out 0.1s;
         }
 
@@ -112,7 +120,7 @@
         }
 
         .logo {
-            background-image: url("/assets/images/logo.png");
+            background-image: url(/assets/images/logo.png);
             transition: all ease-in-out 0.1s;
         }
 
