--- a/src/sections/bannerSection.scss
+++ b/src/sections/bannerSection.scss
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     height: 560px;
-    background-image: url("/assets/images/banner-bcg.svg");
+    background-image: url("./assets/images/banner-bcg.svg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -20,7 +20,7 @@
         width: 100%;
         max-width: 800px;
         height: 560px;
-        background-image: url(/assets/images/banner_illustration.svg);
+        background-image: url("./assets/images/banner_illustration.svg");
         background-repeat: no-repeat;
         background-size: auto;
         background-position: center center;
