--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -1,3 +1,5 @@
+@import "../helpers/breakpoints";
+
 .footer {
     display: block;
     background-color: #575a89;
@@ -34,6 +36,10 @@
             justify-content: space-between;
             align-items: center;
 
+            @include breakpoint(xs) {
+                flex-direction: column;
+            }
+
             &-mail,
             &-phone {
                 display: flex;
@@ -49,6 +55,10 @@
             &-mail {
                 padding-left: 35px;
                 position: relative;
+
+                @include breakpoint(xs) {
+                    margin-bottom: 20px;
+                }
 
                 &::before {
                     position: absolute;
