--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -18,13 +18,17 @@
 
     .hero--img {
         height: 100vh;
-        background-image: url('./assets/images/walk_in_the_park.svg');
+        background-image: url("./assets/images/walk_in_the_park.svg");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
         margin: 0 auto;
         position: relative;
         z-index: 1;
+
+        @include breakpoint(xs) {
+            background-position: -710px center;
+        }
 
         @include breakpoint(sm) {
             background-position: -800px center;
@@ -39,6 +43,10 @@
         left: 150px;
         top: 150px;
 
+        @include breakpoint(xs) {
+            left: 30px;
+        }
+
         @include breakpoint(sm) {
             left: 30px;
         }
@@ -48,12 +56,25 @@
             text-transform: uppercase;
             font-size: 60px;
             margin: 0;
+
+            @include breakpoint(xs) {
+                font-size: 48px;
+            }
         }
 
         h3 {
             font-weight: 300;
             font-size: 32px;
             width: 65%;
+
+            @include breakpoint(xs) {
+                font-size: 28pxpx;
+                width: 100%;
+            }
+
+            @include breakpoint(sm) {
+                width: 75%;
+            }
 
             span {
                 font-weight: 700;
@@ -67,6 +88,10 @@
 
     .nav {
         margin-right: 60px;
+
+        @include breakpoint(xs) {
+            margin-right: 30px;
+        }
 
         li {
             list-style: none;
@@ -99,11 +124,16 @@
         background-size: cover;
         width: 268px;
         height: 100px;
+
+        @include breakpoint(xs) {
+            width: 200px;
+            height: 74px;
+        }
     }
 
     &.light {
         .logo {
-            background-image: url('./assets/images/logo-dark.png');
+            background-image: url("./assets/images/logo-dark.png");
             transition: all ease-in-out 0.1s;
         }
 
@@ -120,7 +150,7 @@
         }
 
         .logo {
-            background-image: url('./assets/images/logo.png');
+            background-image: url("./assets/images/logo.png");
             transition: all ease-in-out 0.1s;
         }
 
