--- a/src/forms/LoanApplicationForm.scss
+++ b/src/forms/LoanApplicationForm.scss
@@ -1,3 +1,5 @@
+@import "../helpers/breakpoints";
+
 .loan--app-form {
     display: block;
     position: relative;
@@ -9,6 +11,16 @@
     border-radius: 6px;
     box-shadow: 0 10px 80px #c1c1c1;
 
+    @include breakpoint(xs) {
+        padding: 40px 0;
+        box-shadow: none;
+        border-radius: 0;
+    }
+
+    @include breakpoint(sm) {
+        width: 90%;
+    }
+
     .form--img {
         display: block;
         width: 60%;
@@ -17,6 +29,10 @@
         background-repeat: no-repeat;
         background-size: contain;
         margin: 0 auto 80px;
+
+        @include breakpoint(xs) {
+            height: 135px;
+        }
     }
 
     .form--img-sent {
@@ -27,6 +43,11 @@
         background-repeat: no-repeat;
         background-size: contain;
         margin: 0 auto 80px;
+
+        @include breakpoint(xs) {
+            width: 75%;
+            height: 175px;
+        }
     }
 
     h1 {
@@ -34,20 +55,39 @@
         margin: 50px auto;
         display: block;
         text-align: center;
+
+        @include breakpoint(xs) {
+            font-size: 28px;
+            text-align: center;
+        }
     }
 
     .section--form-wrap {
         display: flex;
         align-items: flex-start;
 
+        @include breakpoint(xs) {
+            flex-direction: column;
+        }
+
         .section--form-first {
             width: calc(100% - 60px);
             padding: 0 15px 0 45px;
+
+            @include breakpoint(xs) {
+                width: 90%;
+                padding: 0 15px;
+            }
         }
 
         .section--form-second {
             width: calc(100% - 60px);
             padding: 0 45px 0 15px;
+
+            @include breakpoint(xs) {
+                width: 90%;
+                padding: 0 15px;
+            }
         }
 
         label {
@@ -58,6 +98,14 @@
         .form-element .error {
             color: #6c63ff;
             font-weight: 700;
+
+            @include breakpoint(xs) {
+                color: #6c63ff !important;
+            }
+
+            @include breakpoint(sm) {
+                color: #6c63ff !important;
+            }
         }
 
         .input-wrapper,
