--- a/src/sections/infoSection.scss
+++ b/src/sections/infoSection.scss
@@ -13,6 +13,10 @@
         padding: 80px 0;
         position: relative;
 
+        @include breakpoint(xs) {
+            flex-direction: column;
+        }
+
         &::after {
             content: "";
             position: absolute;
@@ -28,6 +32,10 @@
 
         &:nth-child(odd) {
             flex-direction: row-reverse;
+
+            @include breakpoint(xs) {
+                flex-direction: column;
+            }
 
             &::after {
                 content: "";
@@ -60,9 +68,19 @@
             text-align: left;
             padding-left: 60px;
 
+            @include breakpoint(xs) {
+                padding: 0 60px;
+                width: unset;
+            }
+
             h2 {
                 font-size: 32;
                 color: #000;
+
+                @include breakpoint(xs) {
+                    font-size: 28px;
+                    text-align: center;
+                }
             }
 
             p {
@@ -70,6 +88,10 @@
                 color: #000;
                 line-height: 27px;
                 width: 75%;
+
+                @include breakpoint(xs) {
+                    width: unset;
+                }
             }
         }
     }
